# kAOV

./: .gitignore  AUTHORS.md  LICENSE.md  README.md  codemeta.json  pyproject.toml  requirements.txt  tutorial_kaov.ipynb
Data/: reversion_kAOV.csv
Tutorials/: model_specification.ipynb
docs/: conf.py  installation.rst
docs/examples/: index.rst  rabbits_anndata_tutorial.ipynb  tutorial_kaov.ipynb
src/kaov/: __init__.py  kaov.py
