[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"


[project]
name = "kAOV" 
version = "1.9.7"
description = "Kernel Analysis of Variance"
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE.txt"}
keywords = ["kernel methods", "analysis of variance"]
authors = [
  {name = "Polina Arsenteva", email = "polina.arsenteva@ens-lyon.fr" },
  {name = "Anthony Ozier-Lafontaine", email = "antho.ozier.laf@gmail.com" },
  {name = "Ghislain Durif", email = "ghislain.durif@ens-lyon.fr"}
]
maintainers = [
  {name = "Polina Arsenteva", email = "polina.arsenteva@ens-lyon.fr" }
]
dependencies = [
  "matplotlib",
  "numpy",
  "pandas",
  "scipy",
  "patsy",
  # Default torch dependency for Linux and macOS ARM
  "torch>=2.2; sys_platform != 'darwin' or platform_machine != 'x86_64'",
  # macOS x86: torch < 2.3 (hence Python < 3.13)
  "torch>=2.2,<2.3; sys_platform == 'darwin' and platform_machine == 'x86_64'",
  "statsmodels >= 0.14.0",
  "tqdm",
]

[tool.uv]
environments = [
    # Linux
    "sys_platform == 'linux'",
    # MacOS arm
    "sys_platform == 'darwin' and platform_machine != 'x86_64'",
    # MacOS x86
    "sys_platform == 'darwin' and platform_machine == 'x86_64'",
    # Windows (not tested)
    "sys_platform == 'win32'"
]
